--- a/EdgeGatewayApp/EdgeGatewayApp.csproj
+++ b/EdgeGatewayApp/EdgeGatewayApp.csproj
@@ -160,6 +160,9 @@
     <Reference Include="Microsoft.WindowsAzure.Storage, Version=9.3.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAzure.Storage.9.3.2\lib\net45\Microsoft.WindowsAzure.Storage.dll</HintPath>
     </Reference>
+    <Reference Include="MQTTnet, Version=4.0.2.221, Culture=neutral, PublicKeyToken=fdb7629f2e364a63, processorArchitecture=MSIL">
+      <HintPath>..\packages\MQTTnet.4.0.2.221\lib\net461\MQTTnet.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -295,6 +298,7 @@
     <Compile Include="Pages\DataAcquisitionPage.xaml.cs">
       <DependentUpon>DataAcquisitionPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Service\HiveMQTTPubSubServices.cs" />
     <Compile Include="Service\AzureMqttPubSubServices.cs" />
     <Compile Include="Service\HttpsPublishingService.cs" />
     <Compile Include="Service\LocalDataLoggingService.cs" />
