--- a/EdgeGatewayApp/packages.config
+++ b/EdgeGatewayApp/packages.config
@@ -35,6 +35,7 @@
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
+  <package id="MQTTnet" version="4.0.2.221" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="RestSharp" version="107.3.0" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.4" targetFramework="net472" />
